Fixed scrollbar issues in admin and confeditor. The fix is global, so all other pages with overflow will get a scrollbar

--- a/src/development/style/common.useable.scss
+++ b/src/development/style/common.useable.scss
@@ -127,6 +127,8 @@ main {
   height: 100%;
   padding: 1em;
   transition: 0.1s;
+  overflow: auto;
+  max-height: 100%;
 }
 
 @media (max-height: 768px) {
